--- a/RenderLab/RenderLab.vcxproj
+++ b/RenderLab/RenderLab.vcxproj
@@ -176,6 +176,7 @@
     <ClCompile Include="render\RdrContext.cpp" />
     <ClCompile Include="render\Renderer.cpp" />
     <ClCompile Include="render\Shaders.cpp" />
+    <ClCompile Include="render\Sprite.cpp" />
     <ClCompile Include="Scene.cpp" />
     <ClCompile Include="Timer.cpp" />
     <ClCompile Include="WorldObject.cpp" />
@@ -207,6 +208,7 @@
     <ClInclude Include="render\RdrContext.h" />
     <ClInclude Include="render\Renderer.h" />
     <ClInclude Include="render\Shaders.h" />
+    <ClInclude Include="render\Sprite.h" />
     <ClInclude Include="Scene.h" />
     <ClInclude Include="shapes\Plane.h" />
     <ClInclude Include="Timer.h" />
