* Switched vertex, geometry, and compute shaders to fixed types and flag sets.  This avoids the need for maintaining tons of shader combinations on each renderable.  They can instead specify the class of shader and the renderer will swap them around as necessary for depth-only and shadow cubemap passes. * Fixed FreeList thread safety. * Cleaned up a lot of Renderer global resources.

--- a/RenderLab/RenderLab.vcxproj
+++ b/RenderLab/RenderLab.vcxproj
@@ -250,6 +250,7 @@
     <ClInclude Include="render\RdrGeoSystem.h" />
     <ClInclude Include="Scene.h" />
     <ClInclude Include="shapes\Plane.h" />
+    <ClInclude Include="ThreadLock.h" />
     <ClInclude Include="Timer.h" />
     <ClInclude Include="Types.h" />
     <ClInclude Include="UI.h" />
